# conductor

./: .eslintrc.json  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  google-creds.json  install.ps1  install.sh  local-install.sh  package-lock.json  package.json  test-all.mjs  test.mjs  tsconfig.json  vitest.config.ts
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  plugin_request.yml
.github/workflows/: README.md  auto-release.yml  ci.yml  claude-code-review.yml  claude.yml  publish.yml  sync-install-ps1.yml  sync-install.yml
commands/: conductor-setup.md  conductor-status.md
docs/: README.md  api.md  deployment.md  getting-started.md  plugin-sdk.md  plugins.md
docs-site/: README.md  index.md
docs-site/.vitepress/: config.ts
plugins/lumen/: lumen.plugin.ts
sdks/: README.md
sdks/csharp/: ConductorClient.cs  README.md
sdks/go/: README.md  conductor.go
sdks/java/: ConductorClient.java  README.md
sdks/python/: README.md  pyproject.toml
sdks/python/conductor/: __init__.py
sdks/rust/: Cargo.toml  README.md
src/: README.md
tests/: README.md  audit.test.ts  calculator.test.ts  circuit-breaker.test.ts  docker.test.ts  errors.test.ts  github.test.ts.skip  jira.test.ts  linear.test.ts  load.test.ts  mcp.test.ts  mcp.test.ts.skip  notion.test.ts  retry.test.ts  shell.test.ts  slack.test.ts  stripe.test.ts  validation.test.ts  vercel.test.ts  zero-config.test.ts
(+113 files in other folders)
