[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conductor-python"
version = "1.0.0"
description = "Official Python SDK for Conductor — The AI Tool Hub"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Conductor Team", email = "hello@conductor.dev"},
]
keywords = ["ai", "mcp", "tools", "automation", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/conductor/conductor"
Documentation = "https://docs.conductor.dev"
Repository = "https://github.com/conductor/conductor"
