[package]
name = "conductor-rs"
version = "1.0.0"
edition = "2021"
description = "Official Rust SDK for Conductor — The AI Tool Hub"
license = "Apache-2.0"
repository = "https://github.com/conductor/conductor"
keywords = ["ai", "mcp", "tools", "automation"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
